# desktop-shell-integration-dolphin

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
src/: CMakeLists.txt  dolphinactionplugin.cpp  dolphinactionplugin.h  dolphinoverlayplugin.cpp  dolphinpluginhelper.cpp  dolphinpluginhelper.h  ownclouddolphinactionplugin.cpp  ownclouddolphinactionplugin.json  ownclouddolphinoverlayplugin.cpp  ownclouddolphinoverlayplugin.json  ownclouddolphinpluginhelper.cpp  ownclouddolphinpluginhelper.h
